<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:background="?attr/colorSurface"
        android:theme="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/drop"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_drop_down"
                />
            <ImageView
                android:id="@+id/icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_zwcc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/drop"
                />
            <TextView
                android:id="@+id/title"
                android:text="标题"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                app:layout_constraintLeft_toRightOf="@+id/icon"
                app:layout_constraintRight_toLeftOf="@+id/refresh"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:lines="1"
                android:ellipsize="end"
                />
            <ImageView
                android:id="@+id/refresh"
                android:src="@drawable/ic_refresh_24"
                android:contentDescription="@string/web_refresh"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="8dp"
                app:tint="?attr/colorOnSurface"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/copy"
                />
            <ImageView
                android:id="@+id/copy"
                android:src="@drawable/ic_content_copy_24"
                android:contentDescription="@string/web_copy_link"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="8dp"
                app:tint="?attr/colorOnSurface"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/browser"
                />
            <ImageView
                android:id="@+id/browser"
                android:src="@drawable/ic_open_in_browser_24"
                android:contentDescription="@string/web_open_in_browser"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:tint="?attr/colorOnSurface"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
